2003-08-21  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/Makefile.am (coolwave.py):
	* examples/coolwave.py: Added new example program. This is
	again another mapping from C to Python. The original
	program 'coolwave.c' comes with GtkGLExt. It's a good
	example of how to use the latest gtk.gtkgl.apputils
	module quite extensively.

2003-08-18  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font.py:
	* examples/button.py: Don't use apputils module.

	* examples/MoveLight.py:
	* examples/NeHe6Multi.py:
	* examples/Shapes.py:
	* examples/SimpleScene.py:
	* examples/button.py:
	* examples/font.py:
	* examples/scribble-gl.py:
	* examples/scribble.py:
	* examples/scribbling-worms.py:
	* examples/teapot2.py: Changes for new apputils module.

	* gtk/gtkgl/apputils.py: Rewritten. GLScene has been divided into
	some mixin classes. e.g. Users can add button action capability to
	their GLScene by subclassing from GLSceneButton. If given GLScene
	implements GLSceneButton, GLArea enables mouse button events
	automatically. GLArea.enable_* functions are no longer needed.

2003-08-6  Alif Wahid  <awah005@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Fixed timeout function management code
	to ensure per instance timeout intervals for the GLArea class are
	used as noted by Naofumi. Thanks Naofumi.

	* examples/button.py (ButtonDemo.glarea.enable_timeout):
	Updated to reflect	the above changes in the
	gtk.gtkgl.apputils module.

2003-08-5  Alif Wahid  <awah005@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Added timeout callback facility
	for frame update of the GLScene, GLArea and GLApplication
	classes. As requested by Naofumi these new methods/attributes are,
		GLScene.toggle_timeout()
		GLScene.timeout(width, height)

		GLArea.default_timeout_interval
		GLArea.enable_timeout(interval)
		GLArea.timeout_add()
		GLArea.timeout_remove()
		GLArea.toggle_timeout()

		GLApplication.enable_timeout(interval)
